--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "serve-favicon": "~2.3.0",
     "mysql": "^2.5.4",
     "passport": "^0.2.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "node-uuid": "~1.4.7",
+    "line-reader": "~0.3.0"
   }
 }
